overflow for page fixed

--- a/components/nav-bar/🎨navBar.css
+++ b/components/nav-bar/🎨navBar.css
@@ -2,7 +2,6 @@
   height: 80px;
   width: 100%;
   top: 0;
-  overflow: hidden;
   background-color: var(--invert-color);
   display: flex;
   justify-content: center;
@@ -15,7 +14,7 @@
   object-fit: cover;
 }
 
-.nav-mobile-slide-icon-open {
+.nav-mobile-icon-open {
   width: min-content;
   height: min-content;
   position: absolute;
@@ -26,7 +25,7 @@
   transition: right 0.5s cubic-bezier(0.59, 0.22, 0.46, 0.99);
 }
 
-.nav-mobile-slide-icon-close {
+.nav-mobile-icon-close {
   width: min-content;
   height: min-content;
   position: absolute;
@@ -37,11 +36,11 @@
   transition: right 0.5s cubic-bezier(0.59, 0.22, 0.46, 0.99);
 }
 
-.nav-mobile-slide-icon-open i {
+.nav-mobile-icon-open i {
   font-size: 30px;
   color: var(--main-color);
 }
-.nav-mobile-slide-icon-close i {
+.nav-mobile-icon-close i {
   font-size: 30px;
   color: var(--main-color);
 }
@@ -52,10 +51,10 @@
   right: -80%;
   top: 0;
   transition: all 0.5s cubic-bezier(0.59, 0.22, 0.46, 0.99);
+  background-color: var(--invert-color);
+  box-shadow: 0px 0px 0px 0px hsla(0, 0%, 20%, 1);
   position: fixed;
   display: flex;
-  background-color: black;
-  box-shadow: 0px 0px 0px 0px hsla(0, 0%, 20%, 1);
 }
 
 .nav-mobile-slide-root-open {
@@ -64,10 +63,10 @@
   right: 0%;
   top: 0;
   transition: all 0.5s cubic-bezier(0.59, 0.22, 0.46, 0.99);
-  position: fixed;
-  display: flex;
   background-color: var(--invert-color);
   box-shadow: 0px 0px 200px 0px hsla(0, 0%, 20%, 1);
+  position: fixed;
+  display: flex;
 }
 
 .nav-mobile-slide-content {
