--- a/src/🎨index.css
+++ b/src/🎨index.css
@@ -1,11 +1,11 @@
 :root {
   font-family: Helvetica, Arial, sans-serif;
-
   --main-color: white;
   --sec-color: red;
   --ter-color: orange;
   --invert-color: black;
 
+  overflow: hidden;
   color: var(--main-color-text);
   background-color: var(--invert-color);
 
@@ -18,4 +18,9 @@
 a {
   text-decoration: none;
   color: inherit;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
